GNOME Bugzilla – Bug 765089
nm-applet core dumped when asking for new passphrase if secret is stored in gnome key ring
Last modified: 2016-07-05 12:05:32 UTC
I had my wifi passphrase stored in gnome key ring. (only for the current user option) I changed the wifi passphrase on the acces point And nm-applet crashes when asking for the new passphrase: nm-applet-Message: New secrets for XT1039/802-11-wireless-security requested; ask the user ** GLib:ERROR:/build/glib2.0-t9oPgV/glib2.0-2.48.0/./glib/gvarianttypeinfo.c:163:g_variant_type_info_check: assertion failed: (info->alignment == 0 || info->alignment == 1 || info->alignment == 3 || info->alignment == 7) Thread 1 "nm-applet" received signal SIGABRT, Aborted. This does not happen if the passphrase is not stored in gnome key ring (gdb) bt
+ Trace 236180
using network-manager-gnome 1.1.93-1ubuntu1 on ubuntu 16.04
I have also seen exactly this error on a stripped-down lxde installation. Steps to reproduce: - Wifi network selected from nm-applet - Incorrect password entered - Continue pressed to skip setting up password for keyring - Continue pressed to store passwords unencrypted - nm-applet shows green dots and rotating arrow for a while then disappears Debugging shows exactly the error above.
Looks like the same here: http://bandshed.net/forum/index.php?topic=3746.0 and here: http://osdir.com/ml/general/2016-04/msg34986.html
Created attachment 329187 [details] [review] [PATCH] applet: fix crash in applet-agent.c
(In reply to Beniamino Galvani from comment #3) > Created attachment 329187 [details] [review] [review] > [PATCH] applet: fix crash in applet-agent.c looks right, but it leaks the returned @setting_dict variant.
(In reply to Thomas Haller from comment #4) > (In reply to Beniamino Galvani from comment #3) > > Created attachment 329187 [details] [review] [review] [review] > > [PATCH] applet: fix crash in applet-agent.c > > looks right, but it leaks the returned @setting_dict variant. Fixed and applied to master: https://git.gnome.org/browse/network-manager-applet/commit/?id=91d83b708c599f89079ad108898e20696fc3448b nma-1-2: https://git.gnome.org/browse/network-manager-applet/commit/?h=nma-1-2&id=ab3659284ea7cca3086746c81c2060eead05d8c8
Awesome - thanks!
*** Bug 768430 has been marked as a duplicate of this bug. ***