applet: fix crash in applet-agent.c

'@' must be prepended to format string in order to get a GVariant.

Fixes: 3722a190468f5ce5898db8838611bc826d3153f1

https://bugzilla.gnome.org/show_bug.cgi?id=765089