src/applet-agent.c
@@ -384,11 +384,12 @@ done:
 
 		/* Stuff all the found secrets into the connection for the UI to use */
 		g_variant_iter_init (&dict_iter, settings);
-		while (g_variant_iter_next (&dict_iter, "{sa{sv}}", &setting_name, &setting_dict)) {
+		while (g_variant_iter_next (&dict_iter, "{s@a{sv}}", &setting_name, &setting_dict)) {
 			nm_connection_update_secrets (r->connection,
 			                              setting_name,
 			                              setting_dict,
 			                              NULL);
+			g_variant_unref (setting_dict);
 		}
 
 		ask_for_secrets (r);
